--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -33,7 +33,7 @@ jobs:
             - name: Deploy to Firebase
               uses: w9jds/firebase-action@master
               with:
-                  args: deploy --project=action-test --only functions
+                  args: deploy --project=action-test-79ad7 --only functions
               env:
                   FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
                   TEST_ENV: ${{ secrets.TEST_ENV }}
