--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -10,6 +10,8 @@ on:
   push:
       branches: [main]
 
+env:
+    TEST_ENV: ${{ secrets.TEST_ENV }}
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
     # This workflow contains a single job called "build"
@@ -29,9 +31,9 @@ jobs:
                   cd functions
                   npm install
             
-            - name: Add envs
-              run: |
-                echo "TEST_ENV=${{ secrets.TEST_ENV }}" >> functions/.env
+            # - name: Add envs
+            #   run: |
+            #     echo "TEST_ENV=${{ secrets.TEST_ENV }}" >> functions/.env
 
             # Deploying the functions to firebase
             - name: Deploy to Firebase
