--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -42,4 +42,5 @@ jobs:
                   args: deploy --project=action-test-79ad7 --only functions
               env:
                   FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+                  TEST_ENV: ${{ secrets.TEST_ENV }}
 
