--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -10,8 +10,6 @@ on:
   push:
       branches: [main]
 
-env:
-    TEST_ENV: ${{ secrets.TEST_ENV }}
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
     # This workflow contains a single job called "build"
@@ -32,7 +30,7 @@ jobs:
             # And of course we need to goto our functions folder to deploy
             - name: Install npm packages
               run: |
-                  npm install firebase
+                  npm install -g firebase
                   cd functions
                   npm install
                   firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}" --only functions
