--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -30,7 +30,7 @@ jobs:
             # And of course we need to goto our functions folder to deploy
             - name: Install npm packages
               run: |
-                  npm install -g firebase
+                  npm i -g firebase-tools@13.0.2
                   cd functions
                   npm install
                   firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}" --only functions
