--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -22,16 +22,14 @@ jobs:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
             - uses: actions/checkout@v2
 
-            - name: Add envs
-              run: |
-                echo "TEST_ENV=${{ secrets.TEST_ENV }}" >> functions/.env
-
             # Runs a single command using the runners shell
             # And of course we need to goto our functions folder to deploy
             - name: Install npm packages
               run: |
                   npm i -g firebase-tools@13.0.2
                   cd functions
+                  touch .env
+                  echo "${{ secrets.TEST_ENV }}" >> .env
                   npm install
                   firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}" --only functions
             
