--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -29,7 +29,7 @@ jobs:
                   npm i -g firebase-tools@13.0.2
                   cd functions
                   touch .env
-                  echo "${{ secrets.TEST_VAR }}" >> .env
+                  echo "TEST_VAR=${{ secrets.TEST_VAR }}" >> .env
                   npm install
                   firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}" --only functions
             
