--- a/.github/workflows/master-deploy.yml
+++ b/.github/workflows/master-deploy.yml
@@ -5,7 +5,7 @@ name: Firebase function deploy [DEVELOP]
 # Controls when the action will run. Triggers the workflow on push
 # events but only for the master branch
 on:
-  pull_request:
+  push:
       branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -33,6 +33,7 @@ jobs:
             # Deploying the functions to firebase
             - name: Deploy to Firebase
               run: |
+                firebase use action-test-2-e3b67 --token "${{ secrets.FIREBASE_TOKEN }}"
                 firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}" --only functions
             
 
