--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -26,22 +26,13 @@ jobs:
               run: |
                   npm i -g firebase-tools@13.0.2
                   cd functions
-                  touch .env
-                  echo "TEST_VAR=${{ secrets.TEST_VAR }}" >> .env
                   npm install
 
             # Deploying the functions to firebase
             - name: Deploy to Firebase
+              env: 
+                TEST_VAR: ${{ secrets.TEST_VAR }}
               run: |
                 firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}" --only functions
             
-
-            # Deploying the functions to firebase
-            # - name: Deploy to Firebase
-            #   uses: w9jds/firebase-action@master
-            #   with:
-            #       args: deploy --project=action-test-79ad7 --only functions
-            #   env:
-            #       FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-            #       TEST_ENV: ${{ secrets.TEST_ENV }}
 
