--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -10,6 +10,29 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+    job_id:
+        # The type of runner that the job will run on
+        runs-on: ubuntu-latest
+        # Add "id-token" with the intended permissions.
+        permissions:
+          contents: 'read'
+          id-token: 'write'
+
+        steps:
+        - id: 'auth'
+          uses: 'google-github-actions/auth@v2'
+          with:
+            project_id: 'action-test-2-e3b67'
+            workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+
+        - name: 'Set up Cloud SDK'
+          uses: 'google-github-actions/setup-gcloud@v2'
+          with:
+            version: '>= 363.0.0'
+
+        - name: 'Use gcloud CLI'
+          run: 'gcloud info'
+          
     # This workflow contains a single job called "build"
     deploy-dev:
         # The type of runner that the job will run on
