--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -19,6 +19,8 @@ jobs:
           id-token: 'write'
 
         steps:
+        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+        - uses: actions/checkout@v2
         - id: 'auth'
           uses: 'google-github-actions/auth@v2'
           with:
@@ -37,42 +39,25 @@ jobs:
     deploy-dev:
         # The type of runner that the job will run on
         runs-on: ubuntu-latest
-        # Add "id-token" with the intended permissions.
-        permissions:
-          contents: 'read'
-          id-token: 'write'
 
+        # Steps represent a sequence of tasks that will be executed as part of the job
         steps:
-        - id: 'auth'
-          uses: 'google-github-actions/auth@v2'
-          with:
-            project_id: 'action-test-2-e3b67'
-            workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+            - uses: actions/checkout@v2
 
-        - name: 'Set up Cloud SDK'
-          uses: 'google-github-actions/setup-gcloud@v2'
-          with:
-            version: '>= 363.0.0'
+            # Runs a single command using the runners shell
+            # And of course we need to goto our functions folder to deploy
+            - name: Install npm packages
+              run: |
+                  npm i -g firebase-tools@13.0.2
+                  cd functions
+                  npm install
 
-        - name: 'Use gcloud CLI'
-          run: 'gcloud info'
-        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-        - uses: actions/checkout@v2
-
-        # Runs a single command using the runners shell
-        # And of course we need to goto our functions folder to deploy
-        - name: Install npm packages
-          run: |
-              npm i -g firebase-tools@13.0.2
-              cd functions
-              npm install
-
-        # Deploying the functions to firebase
-        - name: Deploy to Firebase
-          env: 
-            TEST_VAR: ${{ secrets.TEST_VAR }}
-          run: |
-            firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}" --only functions
-
+            # Deploying the functions to firebase
+            - name: Deploy to Firebase
+              env: 
+                TEST_VAR: ${{ secrets.TEST_VAR }}
+              run: |
+                firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}" --only functions
             
 
