add step to create a secret for TEST_VAR using gcloud cli. This patch is necessary to securely store sensitive information and use it in the deployment process.

--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -33,7 +33,8 @@ jobs:
             version: '>= 363.0.0'
 
         - name: 'Use gcloud CLI'
-          run: 'gcloud info'
+          run: |
+            gcloud secrets create TEST_VAR --data-file=${{ secrets.TEST_VAR }}
           
     # This workflow contains a single job called "build"
     deploy-dev:
