add replication policy when creating TEST_VAR secret. This patch is necessary to ensure the secret is automatically replicated for data redundancy.

--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -34,7 +34,9 @@ jobs:
 
         - name: 'Use gcloud CLI'
           run: |
-            gcloud secrets create TEST_VAR --data-file=${{ secrets.TEST_VAR }}
+            gcloud secrets create TEST_VAR \
+              --replication-policy="automatic" \
+              --data-file=${{ secrets.TEST_VAR }}
           
     # This workflow contains a single job called "build"
     deploy-dev:
