fix secret create command

--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -44,7 +44,7 @@ jobs:
 
             - name: 'Use gcloud CLI'
               run: |
-                echo -n "${{ secrets.TEST_VAR }}" | gcloud secrets versions add TEST_VAR \
+                echo -n "${{ secrets.TEST_VAR }}" | gcloud secrets create TEST_VAR \
                 --replication-policy="automatic" \
                 --data-file=-
 
