--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
       branches: [main]
 
+env: 
+  TEST_VAR: ${{ secrets.TEST_VAR }}
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
     job_id:
