--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -13,17 +13,17 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-    job_id:
-        # The type of runner that the job will run on
-        runs-on: ubuntu-latest
-        # Add "id-token" with the intended permissions.
-        permissions:
-          contents: 'read'
-          id-token: 'write'
+    # job_id:
+    #     # The type of runner that the job will run on
+    #     runs-on: ubuntu-latest
+    #     # Add "id-token" with the intended permissions.
+    #     permissions:
+    #       contents: 'read'
+    #       id-token: 'write'
 
-        steps:
-        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-        - uses: actions/checkout@v2
+    #     steps:
+    #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    #     - uses: actions/checkout@v2
         
           
     # This workflow contains a single job called "build"
@@ -33,20 +33,17 @@ jobs:
 
         # Steps represent a sequence of tasks that will be executed as part of the job
         steps:
-            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-            - uses: actions/checkout@v2
-            - id: 'auth'
-              uses: 'google-github-actions/auth@v2'
-              with:
-                credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+            # # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+            # - uses: actions/checkout@v2
+            # - id: 'auth'
+            #   uses: 'google-github-actions/auth@v2'
+            #   with:
+            #     credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
 
-            - name: 'Set up Cloud SDK'
-              uses: 'google-github-actions/setup-gcloud@v2'
-              with:
-                version: '>= 363.0.0'
-
-            - name: 'Set secrets'
-              run: bash set-envs.sh
+            # - name: 'Set up Cloud SDK'
+            #   uses: 'google-github-actions/setup-gcloud@v2'
+            #   with:
+            #     version: '>= 363.0.0'
 
             # Runs a single command using the runners shell
             # And of course we need to goto our functions folder to deploy
@@ -55,6 +52,10 @@ jobs:
                   npm i -g firebase-tools@13.0.2
                   cd functions
                   npm install
+
+            - name: 'Set secrets'
+              run: |
+                echo "${{ secrets.TEST_VAR }}" | firebase functions:secrets:set TEST_VAR --project action-test-2-e3b67
 
             # Deploying the functions to firebase
             - name: Deploy to Firebase
