--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/firestore": "^7.1.0",
+    "@google-cloud/secret-manager": "^5.1.0",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
